# post-relay

./: .env.example  .gitignore  AGENTS.md  README.md  implementation-plan.md  pyproject.toml  requirements.md  setup-checklist.md  technical-design.md
assets/contact sheet/: Contact Sheet Final.html  INTEGRATION_PROMPT.md  README.md  carousel-preview.jsx  crop-helpers.js  (+2 more)
config/: photo_sources.example.yaml
docs/: byo-r2-bucket-setup.md  setup-own-instance.md
scripts/: check_publish_smoke_readiness.py  render_design_v2_example.py  validate-instagram-publish.ps1
tests/: test_account_preferences.py  test_agent_checkins.py  test_analytics_feedback.py  test_candidate_builder.py  test_candidate_ranking_signals.py  test_cli.py  test_config_and_scanner.py  test_config_loader.py  test_contact_sheet_design.py  test_context_questions.py  test_crop_feedback.py  test_db.py  test_discord_dm.py  test_discord_preview_payload.py  test_discord_selection.py  test_discord_selection_payload.py  test_dm_guided_review.py  test_dm_intake.py  test_dm_operating_loop.py  test_dm_scheduling.py  test_draft_approvals.py  test_draft_review_package.py  test_drafts.py  test_final_post_artifacts.py  test_final_publish_preview.py  test_guided_draft.py  test_indexer.py  test_instagram_capabilities.py  test_location_tags.py  test_media_awareness.py  test_media_enrichment.py  test_media_selection.py  test_meta_graph.py  test_opportunity_trigger_checks.py  test_pipeline_config.py  test_pipeline_health.py  test_post_opportunities.py  test_publish_exports.py  test_publish_validation.py  test_r2_staging.py  (+10 more)
(+71 files in other folders)
