[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-relay"
version = "0.1.0"
description = "Local-first Instagram travel content planning, review, scheduling, and publishing workflow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "typer>=0.12",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
post-relay = "post_relay.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
